fix layout options menu on mobile

--- a/components/SearchView/components/OptionsMenu/styles.module.scss
+++ b/components/SearchView/components/OptionsMenu/styles.module.scss
@@ -58,8 +58,26 @@
         gap: 0.5rem;
         margin: 0;
 
+
+    }
+
+    .divider {
+        margin-top: 4rem;
+    }
+}
+
+@media (max-width: 426px) {
+    .container {
+        font-size: 18px;
+
+
+
         .filterContainer {
-            margin-top: -1rem;
+            button {
+                font-size: 14px;
+            }
         }
     }
+
+
 }
